# DiverseRL

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  env_list.py  pyproject.toml  pyrightconfig.json  run.py  test2.py  train_classicrl.py  train_modelfree.py
.devcontainer/: devcontainer.json
algos/classic_rl/: README.md  __init__.py  base.py  dyna_q.py  monte_carlo.py  q_learning.py  sarsa.py  toytext_env.pyi
classic_rl/: README.md  __init__.py
configurations/: ddpg_continous_control.yaml  dqn_atari.yaml  dqn_atari_ram.yaml  dqn_classic_control.yaml  ppo_atari.yaml  ppo_continous_control.yaml  ppo_discrete_control.yaml  reinforce_classic_control.yaml  sacv1_continuous_control.yaml  sacv2_continuous_control.yaml  td3_continuous_control.yaml
configurations/classic_rl/: dyna_q.yaml  monte_carlo.yaml  q_learning.yaml  sarsa.yaml
configurations/deep_rl/: ddpg_continous_control.yaml  dqn_atari.yaml  dqn_classic_control.yaml  dqn_pong-v5.yaml  ppo_discrete_control.yaml  reinforce_classic_control.yaml  sacv1_continuous_control.yaml  sacv2_continuous_control.yaml  td3_continuous_control.yaml
diverserl/: run.py
diverserl/algos/: README.md  __init__.py  base.py  ddpg.py  dqn.py  ppo.py  reinforce.py  sac.py  td3.py
diverserl/algos/classic_rl/: README.md  __init__.py  base.py  dyna_q.py  monte_carlo.py  q_learning.py  sarsa.py
diverserl/algos/deep_rl/: README.md  __init__.py  base.py  ddpg.py  dqn.py  ppo.py  reinforce.py  sac.py  td3.py  trpo.py
diverserl/algos/dqns/: __init__.py  ddqn.py  dueling_dqn.py
diverserl/algos/model_free/: __init__.py
diverserl/algos/offline_rl/: __init__.py  base.py  bc.py  cql.py  dt.py
diverserl/algos/pixel_rl/: __init__.py  base.py  curl.py  dqn.py  drq.py  drqv2.py  ppo.py  rad.py  sac.py  sac_ae.py
diverserl/common/: buffer.py  filters.py  image_augmentation.py  make_env.py  make_offline_env.py  type_aliases.py  utils.py  wrappers.py
diverserl/configs/: bc_minari_mujoco.yaml  dqn_gym_atari.yaml  dt_minari_mujoco.yaml  ppo_gym_atari.yaml  ppo_gym_mujoco.yaml  test.yaml
diverserl/configs/algo/: ddpg.yaml  dqn.yaml  ppo.yaml  sac.yaml  sacv1.yaml  td3.yaml
diverserl/configs/algo/classic_rl/: dyna_q.yaml  monte_carlo.yaml  q_learning.yaml  sarsa.yaml
diverserl/configs/algo/dqns/: ddqn.yaml  dueling_dqn.yaml
diverserl/configs/algo/offline_rl/: bc.yaml  cql.yaml  dt.yaml
diverserl/configs/algo/pixel_rl/: curl.yaml  dqn.yaml  drq.yaml  drqv2.yaml  ppo.yaml  rad.yaml  sac.yaml  sac_ae.yaml
diverserl/configs/env/: classic_control.yaml  dm_control_pixel.yaml  dm_control_state.yaml  gym_atari.yaml  gym_atari_ram.yaml  gym_classic_control.yaml  gym_mujoco.yaml  gym_toy_text.yaml  minari_mujoco.yaml
diverserl/configs/trainer/: classic_trainer.yaml  deeprl_trainer.yaml  offline_trainer.yaml  on_policy_trainer.yaml  sequence_offline_trainer.yaml
diverserl/networks/: __init__.py  base.py  basic_networks.py  categorical_actor.py  d2rl_networks.py  decision_transformer.py  dueling_network.py  gaussian_actor.py  gaussian_policy.py  noisy_networks.py  pixel_decoder.py  pixel_encoder.py  utils.py
diverserl/trainers/: __init__.py  base.py  classic_trainer.py  deeprl_trainer.py  offline_trainer.py  on_policy_trainer.py
examples/: run_ddpg.py  run_dqn.py  run_ppo.py  run_reinforce.py  run_sacv1.py  run_sacv2.py  run_td3.py  utils.py
examples/classic_rl/: run_dyna_q.py  run_monte_carlo.py  run_q_learning.py  run_sarsa.py
examples/deep_rl/: run_ddpg.py  run_dqn.py  run_ppo.py  run_reinforce.py  run_sacv1.py  run_sacv2.py  run_td3.py
examples/dqns/: run_ddqn.py  run_dueling_dqn.py
trainers/: __init__.py  classic_trainer.py
