[tool.poetry]
name = "diverserl"
version = "0.0.1"
description = "Diverse Reinforcement Learning algorithms that can be applied to wide variety of environments"
authors = ["Yoonhee Gil <moripiri1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.13,<3.13"
#torch = "^2.1.0"
torch = [
    {platform='win32', version='^2.1.0', source="pytorch-gpu-src"},
    {platform='darwin', version='^2.1.0', source = "pypi"},
    {platform='linux', version='^2.1.0', source = "pypi"}
]

jax = {extras = ["cpu"], version = "^0.4.18"}

gymnasium = {version="^0.29.1", extras=['atari', 'box2d', 'classic-control', 'mujoco', 'toy-text', 'other']}
AutoROM = {version = ">=0.4.2,<0.5.0", extras = ["accept-rom-license"]}
jupyter = "^1.0.0"
rich = "^13.6.0"
tensorboard = "^2.15.1"
wandb = "^0.16.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
isort = "^5.12.0"
black = "^23.10.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
