[project]
name = "diverserl"
version = "0.0.1"
description = "Diverse Reinforcement Learning algorithms that can be applied to wide variety of environments"
authors = [{ name = "Yoonhee Gil", email = "moripiri1234@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "torch",
    "gymnasium[all]>=1.0.0,<2",
    "AutoROM[accept-rom-license]>=0.4.2,<0.5.0",
    "jupyter>=1.0.0,<2",
    "rich>=13.6.0,<14",
    "tensorboard>=2.15.1,<3",
    "wandb>=0.18.5,<0.19",
    "hydra-core>=1.3",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0,<4",
    "isort>=5.12.0,<6",
    "black>=23.10.1,<24",
]
envs = [
    "shimmy[dm-control]>=2.0.0",
    "minari[all, hdf5]>=0.5.1,<0.6",
]

[tool.uv]
default-groups = [
    "dev",
    "envs",
]

[[tool.uv.index]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
explicit = true


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-gpu-src", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
